--- a/Style/Get Started.scss
+++ b/Style/Get Started.scss
@@ -673,7 +673,7 @@ header{
             }
             #menu{
                 display: block;
-                right: 3px;
+                right: 10%;
             }
             
         }
