--- a/Style/Swap.scss
+++ b/Style/Swap.scss
@@ -838,7 +838,7 @@ header {
             }
             #menu {
                 display: block;
-                right: 0px;
+                right:10%;
             }
         }
     }
