--- a/Style/index.scss
+++ b/Style/index.scss
@@ -1127,7 +1127,7 @@ section{
             }
             #menu{
                 display: block;
-                right: 4px;
+                right: 10%;
             }
         }
     }
