--- a/css/Get Started.css
+++ b/css/Get Started.css
@@ -624,7 +624,7 @@ header #menu {
   }
   header nav #menu {
     display: block;
-    right: 3px;
+    right: 10%;
   }
 }
 @media (max-width: 1287px) {
