--- a/css/index.css
+++ b/css/index.css
@@ -1010,7 +1010,7 @@ section #link:hover .fa-solid {
   }
   header nav #menu {
     display: block;
-    right: 4px;
+    right: 10%;
   }
 }
 @media (max-width: 555px) {
